@@ -1,3 +1,7 @@
+2008-01-22  Satoshi Nakagawa <artension@gmail.com>
+
+	Fixed a bug, 'privmsg' and 'notice' type pastes should be sent quickly after pushing the send button.
+
 2008-01-20  Satoshi Nakagawa <artension@gmail.com>
 
 	Made sorting nicks for auto completion stable.
